chore: rescope to @12core

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@little-core-labs/hyperid-wasm",
+  "name": "@12core/hyperid-wasm",
   "version": "0.1.2",
   "description": "hyperid implementation written in ZZ compiled to WASM format",
   "main": "index.js",
